<resources>
    <string name="app_name">Ivotalents</string>
    <string name="facebook_app_id">701158553381720</string>
    <string name="cancel_login">Has cancelado el login</string>
    <string name="error_login">Ha ocurrido un error en el login</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Escribe un correo válido</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Credenciales incorrectas</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_passwords_not_equals">Las contraseñas deben ser iguales</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_global">Ha ocurrido un error inesperado, intente nuevamente</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="register_here_text">Regístrate Aquí</string>
    <string name="no_account_text">¿Aún no tienes cuenta?</string>
    <string name="read_terms_text">Leer términos y condiciones</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_pass">Clave</string>
    <string name="hint_pass_confirmation">Confirmar Clave</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="error_register">Ha ocurrido un error realizando el registro</string>
    <string name="error_password_required">El campo Clave no puede estar vacío</string>
    <string name="error_email_required">El campo E-mail no puede estar vacío</string>
    <string name="error_user_required">El campo Usuario no puede estar vacío</string>
    <string name="error_password_confirm_required">El campo Confirmar Clave no puede estar vacío</string>
    <string name="action_favorite">Notificaciones</string>
    <string name="action_settings">Menu</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummie_bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="cita_dummie">LO QUE CON MUCHO TRABAJO SE ADQUIERE, MÁS SE AMA.</string>
    <string name="industry_address_dummie">Av. Este, entre esquinas Jesuita y Maturín, Altagracia, Caracas.</string>
    <string name="casting_dummie_description">Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi</string>
    <string name="lbl_artist">Artista</string>
    <string name="subtitle_recent_artists">NUEVOS TALENTOS EN IVO TALENTS</string>
    <string name="lbl_artists">ARTISTAS</string>
    <string name="lbl_providers">PROVEEDORES</string>
    <string name="subtitle_recent_providers">ENCUENTRA LOS MEJORES SERVICIOS</string>
    <string name="lbl_followers">SEGUIDORES</string>
    <string name="txt_see_all">Ver todos</string>
    <string name="lbl_followed">SEGUIDOS</string>
    <string name="lbl_industries">INDUSTRIAS</string>
    <string name="subtitle_recent_industries">LAS EMPRESAS DETRÁS DE LOS CASTINGS</string>
    <string name="lbl_castings">CASTINGS</string>
    <string name="subtitle_recent_castings">NUEVAS OPORTUNIDADES EN IVO TALENTS</string>
    <string name="casting_dummie_description2">Productora de eventos busca telonero para abrir show de Incubus</string>
    <string name="casting_dummie_expiration">Hasta Julio 16, 2016</string>
    <string name="txt_read_more">LEER MÁS</string>
    <string name="txt_see_all_oportunities">Ver todas las oportunidades</string>
    <string name="txt_message_to">Escribe un nombre</string>
    <string name="txt_message_body">Escribe un mensaje...</string>
    <string name="dummie_casting_info">Productora de eventos busca telonero para abrir show en Incubus</string>
    <string name="dummie_casting_detail1">Music Records invita a todas las agrupaciones de rock de Panamá a participar del casting para encontrar a la banda telonera de Incubus en su próximo concierto en la capital.</string>
    <string name="dummie_casting_detail2">Una banda será seleccionada y contactada oficialmente con la productora para culminar el contrato y convertirse en telonera de Incubus en Panamá</string>
    <string name="dummie_casting_detail3">UNA BANDA SERÁ SELECCIONADA PARA CONVERTIRSE EN TELONERA DE INCUBUS EN PANAMÁ</string>
    <string name="dummie_casting_detail4">Si estás en el mundo de la industria artística encuentra la persona ideal para tu proyecto realizando un casting con ivo Talents. Tambien puedes simplemente unirte a nuestra base registrándote como talento y participar en los castings que tenemos para ti</string>
    <string name="dummie_congraulations">LA PRODUCTORA DE LOS GRANDES EVENTOS DE PANAMÁ TE FELICITA POR AUDICIONAR EN SU CASTING</string>
    <string name="user_existent">Ya se encuentra registrado</string>
    <string-array name="artist_categories">
        <item>MÚSICO</item>
        <item>MODELO</item>
        <item>ARTISTA</item>
        <item>CANTANTE</item>
        <item>BAILARÍN</item>
        <item>MODELO</item>
    </string-array>
    <string-array name="artist_names">
        <item>Catherine Lewis</item>
        <item>Catherine Lewis</item>
        <item>Catherine Lewis</item>
        <item>Catherine Lewis</item>
        <item>Catherine Lewis</item>
        <item>Catherine Lewis</item>
    </string-array>
    <string-array name="artist_abilities">
        <item>Compositor</item>
        <item>Fashion</item>
        <item>Pintor</item>
        <item>Cantautor</item>
        <item>Danza</item>
        <item>Catálogo</item>
    </string-array>
    <string-array name="provider_categories">
        <item>MAQUILLAJE</item>
        <item>FOTOGRAFÍA</item>
        <item>DISEÑO</item>
    </string-array>
    <string-array name="provider_names">
        <item>Catherine Lewis</item>
        <item>Catherine Lewis</item>
        <item>Catherine Lewis</item>
    </string-array>
    <string-array name="provider_abilities">
        <item>Makeup Artist</item>
        <item>Fotógrafo</item>
        <item>Pintor</item>
    </string-array>
    <string-array name="industry_categories">
        <item>AGENCIAS</item>
        <item>DIRECTORES</item>
        <item>PRODUCTORES</item>
        <item>PRODUCTORES</item>
    </string-array>
    <string-array name="industry_names">
        <item>Catherine Lewis</item>
        <item>Catherine Lewis</item>
        <item>Catherine Lewis</item>
        <item>Catherine Lewis3</item>
    </string-array>
    <string-array name="industry_abilities">
        <item>Publicidad</item>
        <item>Cine documental</item>
        <item>Producción de Evento</item>
        <item>Producción de Eventos</item>
    </string-array>
    <string-array name="follower_categories">
        <item>MÚSICA</item>
        <item>MÚSICA</item>
    </string-array>
    <string-array name="follower_names">
        <item>Music Records</item>
        <item>Music Records</item>
    </string-array>
    <string-array name="follower_abilities">
        <item>Producción de Eventos</item>
        <item>Producción de Eventos</item>
    </string-array>
    <string-array name="followed_categories">
        <item>MÚSICA</item>
        <item>MÚUSICA</item>
    </string-array>
    <string-array name="followed_names">
        <item>Music Records</item>
        <item>Music Records</item>
    </string-array>
    <string-array name="followed_abilities">
        <item>Producción de Eventos</item>
        <item>Producción de Eventos</item>
    </string-array>
    <string-array name="casting_categories">
        <item>MÚSICA</item>
        <item>MÚSICA</item>
        <item>MÚSICA</item>
    </string-array>
    <string-array name="casting_descriptions">
        <item>Productora de eventos busca telonero para abrir show de Incubus</item>
        <item>Productora de eventos busca telonero para abrir show de Incubus</item>
        <item>Productora de eventos busca telonero para abrir show de Incubus</item>
    </string-array>
    <string-array name="casting_expirations">
        <item>Hasta Julio 16, 2016</item>
        <item>Hasta Julio 16, 2016</item>
        <item>Hasta Julio 16, 2016</item>
    </string-array>
    <string-array name="received_message_names">
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
    </string-array>
    <string-array name="received_message_resumes">
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
    </string-array>
    <string-array name="send_message_names">
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
    </string-array>
    <string-array name="send_message_resumes">
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
        <item>Resumen del mensaje</item>
    </string-array>
    <string-array name="contact_names">
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
    </string-array>
    <string-array name="contact_sectors">
        <item>Sector</item>
        <item>Sector</item>
        <item>Sector</item>
        <item>Sector</item>
        <item>Sector</item>
        <item>Sector</item>
    </string-array>
    <string-array name="dummie_chat_messages">
        <item>Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi</item>
        <item>Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi</item>
    </string-array>
    <string-array name="dummie_chat_dates">
        <item>Noviembre 18, 2016</item>
        <item>Diciembre 20, 2016</item>
    </string-array>
    <string-array name="dummie_chat_types">
        <item>enviado</item>
        <item>recibido</item>
    </string-array>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
</resources>