<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.threedlink.ivotalents.HomeArtist"
    android:orientation="vertical"
    android:id="@+id/fragment_home_artist"
    >



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ivo_white_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:padding="3dp"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:text="@string/lbl_castings"
                    android:background="@drawable/bg_lbl_green"
                    android:tag="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_recent_castings"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:tag="normal"
                    android:textSize="16sp"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/newCastingsList"
                        android:horizontalSpacing="5dp"
                        android:verticalSpacing="5dp"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/ivo_gray_audio_dark"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/txt_see_all_oportunities"
                            android:textColor="@color/ivo_green_dark"
                            android:textSize="14sp"
                            android:tag="semibolditalic"
                            android:clickable="true"/>
                    </LinearLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/ivo_gray_dark"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:padding="3dp"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:text="@string/lbl_providers"
                    android:background="@drawable/bg_lbl_pink"
                    android:tag="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_recent_providers"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:tag="normal"
                    android:textSize="16sp"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">
                    <GridView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numColumns="3"
                        android:id="@+id/newIndustriesGrid"
                        android:horizontalSpacing="5dp"
                        android:verticalSpacing="5dp"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:background="@color/ivo_gray_grid"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/ivo_blue"
                        android:text="@string/lbl_followers"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:tag="bold"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/ivo_gray_audio_dark"/>
                    <GridView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:numColumns="2"
                        android:id="@+id/followersGrid"
                        android:horizontalSpacing="5dp"
                        android:verticalSpacing="5dp"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/ivo_gray_audio_dark"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/txt_see_all"
                            android:textColor="@color/ivo_blue"
                            android:textSize="14sp"
                            android:tag="semibolditalic"
                            android:clickable="true"/>
                    </LinearLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/ivo_gray_dark"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/ivo_blue"
                        android:text="@string/lbl_followed"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:tag="bold"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/ivo_gray_audio_dark"/>
                    <GridView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:numColumns="2"
                        android:id="@+id/followedsGrid"
                        android:horizontalSpacing="5dp"
                        android:verticalSpacing="5dp"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/ivo_gray_audio_dark"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/txt_see_all"
                            android:textColor="@color/ivo_blue"
                            android:textSize="14sp"
                            android:tag="semibolditalic"
                            android:clickable="true"/>
                    </LinearLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/ivo_gray_dark"
                        ></FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"></FrameLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
