<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ivo_line_gray"
        android:layout_marginBottom="5dp"></FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.3">
            <ImageView
                android:id="@+id/casting_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@color/ivo_gray_dark"
                android:scaleType="fitXY"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="0.45"
            android:layout_marginLeft="5dp"
            >
            <TextView
                android:id="@+id/casting_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ivo_green_dark"
                android:text="MUSICA"
                android:textStyle="normal"
                android:tag="normal"
                android:textSize="10sp"
                android:padding="3dp"
                android:background="@color/black"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:id="@+id/casting_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/casting_dummie_description2"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/casting_expiration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/casting_dummie_expiration"
                    android:textSize="14sp"
                    android:textColor="@color/ivo_green_dark"
                    android:layout_gravity="bottom"
                />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:weightSum="1"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/casting_btn_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_read_more"
                android:textColor="@color/ivo_green_dark"
                android:textSize="10sp"
                android:background="@drawable/border_green_dark_shape"
                android:layout_weight="0.9"
                android:layout_centerHorizontal="true"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>